Add Selenium Tests Created page object model (POM) to interact wtih rules editor. Added element IDs where needed to ease page interaction with Selenium.

--- a/rules_engine/rules/templates/rules/action_parameter_form.html
+++ b/rules_engine/rules/templates/rules/action_parameter_form.html
@@ -9,7 +9,7 @@
 {% for field in parameter_form.visible_fields %}
 <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
 {% if field.errors %}
-<div class="alert alert-danger">
+<div id="{{ field.id_for_label }}_errors" class="alert alert-danger">
     {{ field.errors }}
 </div>
 {% endif %}
