--- a/rules_engine/rules/templates/rules/index.html
+++ b/rules_engine/rules/templates/rules/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div id="rules_list" class="col">
                     <h1>Rules Manager</h1>
                     {% if rule_list %}
                         <ul>
