--- a/rules_engine/rules/templates/rules/action_form.html
+++ b/rules_engine/rules/templates/rules/action_form.html
@@ -2,14 +2,14 @@
 {{ hidden }}
 {% endfor %}
 {% if action_form.non_field_errors %}
-<div class="alert alert-danger">
+<div id="id_ruleactions_set-___prefix___-errors" class="alert alert-danger">
     {{ action_form.non_field_errors }}
 </div>
 {% endif %}
 <div>
     <label for="{{ action_form.action_number.id_for_label }}" class="form-label">{{ action_form.action_number.label }}</label>
     {% if action_form.action_number.errors %}
-    <div class="alert alert-danger">
+    <div id="{{ action_form.action_number.id_for_label }}_errors" class="alert alert-danger">
         {{ action_form.action_number.errors }}
     </div>
     {% endif %}
@@ -19,7 +19,7 @@
 <div>
     <label for="{{ action_form.action.id_for_label }}" class="form-label">{{ action_form.action.label }}</label>
     {% if action_form.action.errors %}
-    <div class="alert alert-danger">
+    <div id="{{ action_form.action.id_for_label }}_errors" class="alert alert-danger">
         {{ action_form.action.errors }}
     </div>
     {% endif %}
