--- a/rules_engine/rules/templates/rules/rule_form.html
+++ b/rules_engine/rules/templates/rules/rule_form.html
@@ -5,13 +5,13 @@
         {{ hidden }}
         {% endfor %}
         {% if rule_form.non_field_errors %}
-        <div class="alert alert-danger">
+        <div id="rule_form_errors" class="alert alert-danger">
             {{ rule_form.non_field_errors }}
         </div>
         {% endif %}
         <label for="{{ rule_form.name.id_for_label }}" class="form-label">{{ rule_form.name.label }}</label>
         {% if rule_form.name.errors %}
-        <div class="alert alert-danger">
+        <div id="{{ rule_form.name.id_for_label }}_errors" class="alert alert-danger">
             {{ rule_form.name.errors }}
         </div>
         {% endif %}
@@ -24,7 +24,7 @@
         <fieldset>
             <legend><span>Criteria:</span></legend>
             {% if rule_form.criteria.errors %}
-            <div class="alert alert-danger">
+            <div id="criteria_errors" class="alert alert-danger">
                 {{ rule_form.criteria.errors }}
             </div>
             {% endif %}
@@ -50,14 +50,14 @@
                     {{ hidden }}
                     {% endfor %}
                     {% if action_form.non_field_errors %}
-                    <div class="alert alert-danger">
+                    <div id="id_ruleactions_set-{{ action_form.id.auto_id|get_id_number }}-errors" class="alert alert-danger">
                         {{ action_form.non_field_errors }}
                     </div>
                     {% endif %}
                     <div>
                         <label for="{{ action_form.action_number.id_for_label }}" class="form-label">{{ action_form.action_number.label }}</label>
                         {% if action_form.action_number.errors %}
-                        <div class="alert alert-danger">
+                        <div id="{{ action_form.action_number.id_for_label }}_errors" class="alert alert-danger">
                             {{ action_form.action_number.errors }}
                         </div>
                         {% endif %}
@@ -67,7 +67,7 @@
                     <div>
                         <label for="{{ action_form.action.id_for_label }}" class="form-label">{{ action_form.action.label }}</label>
                         {% if action_form.action.errors %}
-                        <div class="alert alert-danger">
+                        <div id="{{ action_form.action.id_for_label }}_errors" class="alert alert-danger">
                             {{ action_form.action.errors }}
                         </div>
                         {% endif %}
@@ -87,14 +87,14 @@
                             {{ hidden }}
                             {% endfor %}
                             {% if parameter_form.non_field_errors %}
-                            <div class="alert alert-danger">
+                            <div id="non_field_errors" class="alert alert-danger">
                                 {{ parameter_form.non_field_errors }}
                             </div>
                             {% endif %}
                             {% for field in parameter_form.visible_fields %}
                             <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>    
                             {% if field.errors %}
-                            <div class="alert alert-danger">
+                            <div id="{{ field.id_for_label }}_errors" class="alert alert-danger">
                                 {{ field.errors }}
                             </div>
                             {% endif %}
@@ -114,12 +114,12 @@
             </div>
             {% endfor %}
             <div id="ruleactions_formset_additional"></div>
-            <button type="button" onclick="addAction()" class="btn btn-secondary">Add Action</button>
+            <button id="add_action_button" type="button" onclick="addAction()" class="btn btn-secondary">Add Action</button>
         </fieldset>
     </div>
 </div>
 <div class="row">
     <div class="col mb-3">
-        <input type="submit" value="Save" class="btn btn-primary">
+        <input id="submit_button" type="submit" value="Save" class="btn btn-primary">
     </div>
 </div>
