Rename functions.js File to rule_functions.js Reorganizing the JavaScript functions so that functions needed globally are located in a single file (global_functions.js) and functions needed per page are located in a single file for that page (rule_functions.js).

--- a/rules_engine/rules/templates/rules/rule_create.html
+++ b/rules_engine/rules/templates/rules/rule_create.html
@@ -8,7 +8,7 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'rules/style.css' %}">
         {% load rule_extras %}
-        <script type="text/javascript" src="{% static 'rules/functions.js' %}"></script>
+        <script type="text/javascript" src="{% static 'rules/rule_functions.js' %}"></script>
         {% include 'rules/add_action.html' %}
     </head>
     <body>
