--- a/rules_engine/rules/templates/rules/rule_edit.html
+++ b/rules_engine/rules/templates/rules/rule_edit.html
@@ -8,7 +8,7 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'rules/style.css' %}">
         {% load rule_extras %}
-        <script type="text/javascript" src="{% static 'rules/functions.js' %}"></script>
+        <script type="text/javascript" src="{% static 'rules/rule_functions.js' %}"></script>
         {% include 'rules/add_action.html' %}
     </head>
     <body>
