--- a/rules_engine/rules/templates/rules/index.html
+++ b/rules_engine/rules/templates/rules/index.html
@@ -5,12 +5,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>List of Rules</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        {% load static %}
+        <script type="text/javascript" src="{% static 'rules/global_functions.js' %}"></script>
+        <script type="text/javascript" src="{% static 'rules/index_functions.js' %}"></script>
     </head>
     <body>
         <div class="container">
             <div class="row">
+                <h1>Rules Manager</h1>
+                {% if engine_alert  %}
+                    <div id="engine_status_area" class="alert alert-danger" role="alert">
+                {% else %}
+                    <div id="engine_status_area" class="alert alert-success" role="alert">
+                {% endif %}
+                <h4>Rules Engine</h4>
+                <h5>Status</h5>
+                <p id="engine_status" class="mb-0">{{ engine_status_text_status }}</p>
+                {% if engine_status_text_reload %}
+                    <hr>
+                    <h5>Reload Request</h5>
+                    <p id="reload_status" class="mb-0">{{ engine_status_text_reload }}</p>
+                    {% if engine_alert %}
+                        <button id="reload_button" type="button" onclick="callEngineReload()" class="btn btn-primary">Reload Ruleset</button>
+                    {% endif %}
+                {% endif %}
+                </div>
+            </div>
+            <div class="row">
                 <div id="rules_list" class="col">
-                    <h1>Rules Manager</h1>
                     {% if rule_list %}
                         <ul>
                             {% for rule in rule_list %}
@@ -18,7 +40,7 @@
                             {% endfor %}
                         </ul>
                     {% else %}
-                        <p>There are no rules to manage.</p>
+                        <p id="no_rules_message">There are no rules to manage.</p>
                     {% endif %}
                 </div>
             </div>
